Compilador/src/semanticanalyzer/Byacc/y.output
   0  $accept : programa $end

   1  programa : bloque

   2  bloque : BEGIN sentencias END

   3  sentencias : sentencias sentencia
   4             | sentencia

   5  sentencia : declaracion
   6            | asignacion
   7            | impresion
   8            | iteracion
   9            | seleccion
  10            | error ';'

  11  sentencias_ejecutables :
  12                         | declaracion_variables
  13                         | asignacion
  14                         | impresion
  15                         | iteracion
  16                         | seleccion
  17                         | error ';'

  18  declaracion : tipo variables ';'
  19              | tipo FUN ID '(' tipo ID ')' bloque_funciones
  20              | tipo FUN ID '(' ')' bloque_funciones

  21  declaracion_variables : tipo variables ';'

  22  bloque_funciones : BEGIN sentencias retorno END

  23  tipo : INTEGER
  24       | ULONGINT

  25  variables : variables ',' variable
  26            | variable

  27  variable : ID

  28  asignacion : ID ASIGNACION expresion ';'

  29  expresion : termino
  30            | expresion '+' termino
  31            | expresion '-' termino

  32  termino : factor
  33          | termino '*' factor
  34          | termino '/' factor

  35  factor : ID
  36         | NUMERIC_CONST
  37         | invocacion
  38         | '-' NUMERIC_CONST
  39         | ITOUL '(' expresion ')'

  40  invocacion : ID '(' parametros ')' ';'

  41  parametros : ID
  42             | NUMERIC_CONST
  43             | '-' NUMERIC_CONST

  44  impresion : PRINT '(' STRING_CONST ')' ';'

  45  iteracion : WHILE '(' condicion ')' DO bloque_ejecutables
  46            | WHILE '(' condicion ')' bloque_ejecutables

  47  seleccion : IF '(' condicion ')' THEN bloque_ejecutables ELSE bloque END_IF
  48            | IF '(' condicion ')' THEN bloque_ejecutables END_IF

  49  condicion : expresion comparador expresion

  50  comparador : GREATER_EQUAL
  51             | LESS_EQUAL
  52             | NOT_EQUAL
  53             | '>'
  54             | '<'
  55             | '='

  56  bloque_ejecutables : BEGIN sentencias_ejecutables END

  57  retorno : RETURN '(' expresion ')' ';'

state 0
	$accept : . programa $end  (0)

	BEGIN  shift 1
	.  error

	programa  goto 2
	bloque  goto 3


state 1
	bloque : BEGIN . sentencias END  (2)

	error  shift 4
	ID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	INTEGER  shift 9
	ULONGINT  shift 10
	.  error

	sentencias  goto 11
	sentencia  goto 12
	declaracion  goto 13
	asignacion  goto 14
	impresion  goto 15
	iteracion  goto 16
	seleccion  goto 17
	tipo  goto 18


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : bloque .  (1)

	.  reduce 1


state 4
	sentencia : error . ';'  (10)

	';'  shift 19
	.  error


state 5
	asignacion : ID . ASIGNACION expresion ';'  (28)

	ASIGNACION  shift 20
	.  error


state 6
	seleccion : IF . '(' condicion ')' THEN bloque_ejecutables ELSE bloque END_IF  (47)
	seleccion : IF . '(' condicion ')' THEN bloque_ejecutables END_IF  (48)

	'('  shift 21
	.  error


state 7
	impresion : PRINT . '(' STRING_CONST ')' ';'  (44)

	'('  shift 22
	.  error


state 8
	iteracion : WHILE . '(' condicion ')' DO bloque_ejecutables  (45)
	iteracion : WHILE . '(' condicion ')' bloque_ejecutables  (46)

	'('  shift 23
	.  error


state 9
	tipo : INTEGER .  (23)

	.  reduce 23


state 10
	tipo : ULONGINT .  (24)

	.  reduce 24


state 11
	bloque : BEGIN sentencias . END  (2)
	sentencias : sentencias . sentencia  (3)

	error  shift 4
	ID  shift 5
	IF  shift 6
	END  shift 24
	PRINT  shift 7
	WHILE  shift 8
	INTEGER  shift 9
	ULONGINT  shift 10
	.  error

	sentencia  goto 25
	declaracion  goto 13
	asignacion  goto 14
	impresion  goto 15
	iteracion  goto 16
	seleccion  goto 17
	tipo  goto 18


state 12
	sentencias : sentencia .  (4)

	.  reduce 4


state 13
	sentencia : declaracion .  (5)

	.  reduce 5


state 14
	sentencia : asignacion .  (6)

	.  reduce 6


state 15
	sentencia : impresion .  (7)

	.  reduce 7


state 16
	sentencia : iteracion .  (8)

	.  reduce 8


state 17
	sentencia : seleccion .  (9)

	.  reduce 9


state 18
	declaracion : tipo . variables ';'  (18)
	declaracion : tipo . FUN ID '(' tipo ID ')' bloque_funciones  (19)
	declaracion : tipo . FUN ID '(' ')' bloque_funciones  (20)

	ID  shift 26
	FUN  shift 27
	.  error

	variables  goto 28
	variable  goto 29


state 19
	sentencia : error ';' .  (10)

	.  reduce 10


state 20
	asignacion : ID ASIGNACION . expresion ';'  (28)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	expresion  goto 34
	termino  goto 35
	factor  goto 36
	invocacion  goto 37


state 21
	seleccion : IF '(' . condicion ')' THEN bloque_ejecutables ELSE bloque END_IF  (47)
	seleccion : IF '(' . condicion ')' THEN bloque_ejecutables END_IF  (48)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	expresion  goto 38
	termino  goto 35
	factor  goto 36
	invocacion  goto 37
	condicion  goto 39


state 22
	impresion : PRINT '(' . STRING_CONST ')' ';'  (44)

	STRING_CONST  shift 40
	.  error


state 23
	iteracion : WHILE '(' . condicion ')' DO bloque_ejecutables  (45)
	iteracion : WHILE '(' . condicion ')' bloque_ejecutables  (46)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	expresion  goto 38
	termino  goto 35
	factor  goto 36
	invocacion  goto 37
	condicion  goto 41


state 24
	bloque : BEGIN sentencias END .  (2)

	.  reduce 2


state 25
	sentencias : sentencias sentencia .  (3)

	.  reduce 3


state 26
	variable : ID .  (27)

	.  reduce 27


state 27
	declaracion : tipo FUN . ID '(' tipo ID ')' bloque_funciones  (19)
	declaracion : tipo FUN . ID '(' ')' bloque_funciones  (20)

	ID  shift 42
	.  error


state 28
	declaracion : tipo variables . ';'  (18)
	variables : variables . ',' variable  (25)

	';'  shift 43
	','  shift 44
	.  error


state 29
	variables : variable .  (26)

	.  reduce 26


state 30
	factor : ID .  (35)
	invocacion : ID . '(' parametros ')' ';'  (40)

	'('  shift 45
	GREATER_EQUAL  reduce 35
	LESS_EQUAL  reduce 35
	NOT_EQUAL  reduce 35
	';'  reduce 35
	')'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'='  reduce 35


state 31
	factor : NUMERIC_CONST .  (36)

	.  reduce 36


state 32
	factor : ITOUL . '(' expresion ')'  (39)

	'('  shift 46
	.  error


state 33
	factor : '-' . NUMERIC_CONST  (38)

	NUMERIC_CONST  shift 47
	.  error


state 34
	asignacion : ID ASIGNACION expresion . ';'  (28)
	expresion : expresion . '+' termino  (30)
	expresion : expresion . '-' termino  (31)

	';'  shift 48
	'+'  shift 49
	'-'  shift 50
	.  error


state 35
	expresion : termino .  (29)
	termino : termino . '*' factor  (33)
	termino : termino . '/' factor  (34)

	'*'  shift 51
	'/'  shift 52
	GREATER_EQUAL  reduce 29
	LESS_EQUAL  reduce 29
	NOT_EQUAL  reduce 29
	';'  reduce 29
	')'  reduce 29
	'+'  reduce 29
	'-'  reduce 29
	'>'  reduce 29
	'<'  reduce 29
	'='  reduce 29


state 36
	termino : factor .  (32)

	.  reduce 32


state 37
	factor : invocacion .  (37)

	.  reduce 37


state 38
	expresion : expresion . '+' termino  (30)
	expresion : expresion . '-' termino  (31)
	condicion : expresion . comparador expresion  (49)

	GREATER_EQUAL  shift 53
	LESS_EQUAL  shift 54
	NOT_EQUAL  shift 55
	'+'  shift 49
	'-'  shift 50
	'>'  shift 56
	'<'  shift 57
	'='  shift 58
	.  error

	comparador  goto 59


state 39
	seleccion : IF '(' condicion . ')' THEN bloque_ejecutables ELSE bloque END_IF  (47)
	seleccion : IF '(' condicion . ')' THEN bloque_ejecutables END_IF  (48)

	')'  shift 60
	.  error


state 40
	impresion : PRINT '(' STRING_CONST . ')' ';'  (44)

	')'  shift 61
	.  error


state 41
	iteracion : WHILE '(' condicion . ')' DO bloque_ejecutables  (45)
	iteracion : WHILE '(' condicion . ')' bloque_ejecutables  (46)

	')'  shift 62
	.  error


state 42
	declaracion : tipo FUN ID . '(' tipo ID ')' bloque_funciones  (19)
	declaracion : tipo FUN ID . '(' ')' bloque_funciones  (20)

	'('  shift 63
	.  error


state 43
	declaracion : tipo variables ';' .  (18)

	.  reduce 18


state 44
	variables : variables ',' . variable  (25)

	ID  shift 26
	.  error

	variable  goto 64


state 45
	invocacion : ID '(' . parametros ')' ';'  (40)

	ID  shift 65
	NUMERIC_CONST  shift 66
	'-'  shift 67
	.  error

	parametros  goto 68


state 46
	factor : ITOUL '(' . expresion ')'  (39)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	expresion  goto 69
	termino  goto 35
	factor  goto 36
	invocacion  goto 37


state 47
	factor : '-' NUMERIC_CONST .  (38)

	.  reduce 38


state 48
	asignacion : ID ASIGNACION expresion ';' .  (28)

	.  reduce 28


state 49
	expresion : expresion '+' . termino  (30)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	termino  goto 70
	factor  goto 36
	invocacion  goto 37


state 50
	expresion : expresion '-' . termino  (31)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	termino  goto 71
	factor  goto 36
	invocacion  goto 37


state 51
	termino : termino '*' . factor  (33)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	factor  goto 72
	invocacion  goto 37


state 52
	termino : termino '/' . factor  (34)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	factor  goto 73
	invocacion  goto 37


state 53
	comparador : GREATER_EQUAL .  (50)

	.  reduce 50


state 54
	comparador : LESS_EQUAL .  (51)

	.  reduce 51


state 55
	comparador : NOT_EQUAL .  (52)

	.  reduce 52


state 56
	comparador : '>' .  (53)

	.  reduce 53


state 57
	comparador : '<' .  (54)

	.  reduce 54


state 58
	comparador : '=' .  (55)

	.  reduce 55


state 59
	condicion : expresion comparador . expresion  (49)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	expresion  goto 74
	termino  goto 35
	factor  goto 36
	invocacion  goto 37


state 60
	seleccion : IF '(' condicion ')' . THEN bloque_ejecutables ELSE bloque END_IF  (47)
	seleccion : IF '(' condicion ')' . THEN bloque_ejecutables END_IF  (48)

	THEN  shift 75
	.  error


state 61
	impresion : PRINT '(' STRING_CONST ')' . ';'  (44)

	';'  shift 76
	.  error


state 62
	iteracion : WHILE '(' condicion ')' . DO bloque_ejecutables  (45)
	iteracion : WHILE '(' condicion ')' . bloque_ejecutables  (46)

	BEGIN  shift 77
	DO  shift 78
	.  error

	bloque_ejecutables  goto 79


state 63
	declaracion : tipo FUN ID '(' . tipo ID ')' bloque_funciones  (19)
	declaracion : tipo FUN ID '(' . ')' bloque_funciones  (20)

	INTEGER  shift 9
	ULONGINT  shift 10
	')'  shift 80
	.  error

	tipo  goto 81


state 64
	variables : variables ',' variable .  (25)

	.  reduce 25


state 65
	parametros : ID .  (41)

	.  reduce 41


state 66
	parametros : NUMERIC_CONST .  (42)

	.  reduce 42


state 67
	parametros : '-' . NUMERIC_CONST  (43)

	NUMERIC_CONST  shift 82
	.  error


state 68
	invocacion : ID '(' parametros . ')' ';'  (40)

	')'  shift 83
	.  error


state 69
	expresion : expresion . '+' termino  (30)
	expresion : expresion . '-' termino  (31)
	factor : ITOUL '(' expresion . ')'  (39)

	')'  shift 84
	'+'  shift 49
	'-'  shift 50
	.  error


state 70
	expresion : expresion '+' termino .  (30)
	termino : termino . '*' factor  (33)
	termino : termino . '/' factor  (34)

	'*'  shift 51
	'/'  shift 52
	GREATER_EQUAL  reduce 30
	LESS_EQUAL  reduce 30
	NOT_EQUAL  reduce 30
	';'  reduce 30
	')'  reduce 30
	'+'  reduce 30
	'-'  reduce 30
	'>'  reduce 30
	'<'  reduce 30
	'='  reduce 30


state 71
	expresion : expresion '-' termino .  (31)
	termino : termino . '*' factor  (33)
	termino : termino . '/' factor  (34)

	'*'  shift 51
	'/'  shift 52
	GREATER_EQUAL  reduce 31
	LESS_EQUAL  reduce 31
	NOT_EQUAL  reduce 31
	';'  reduce 31
	')'  reduce 31
	'+'  reduce 31
	'-'  reduce 31
	'>'  reduce 31
	'<'  reduce 31
	'='  reduce 31


state 72
	termino : termino '*' factor .  (33)

	.  reduce 33


state 73
	termino : termino '/' factor .  (34)

	.  reduce 34


state 74
	expresion : expresion . '+' termino  (30)
	expresion : expresion . '-' termino  (31)
	condicion : expresion comparador expresion .  (49)

	'+'  shift 49
	'-'  shift 50
	')'  reduce 49


state 75
	seleccion : IF '(' condicion ')' THEN . bloque_ejecutables ELSE bloque END_IF  (47)
	seleccion : IF '(' condicion ')' THEN . bloque_ejecutables END_IF  (48)

	BEGIN  shift 77
	.  error

	bloque_ejecutables  goto 85


state 76
	impresion : PRINT '(' STRING_CONST ')' ';' .  (44)

	.  reduce 44


state 77
	bloque_ejecutables : BEGIN . sentencias_ejecutables END  (56)
	sentencias_ejecutables : .  (11)

	error  shift 86
	ID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	INTEGER  shift 9
	ULONGINT  shift 10
	END  reduce 11

	asignacion  goto 87
	impresion  goto 88
	iteracion  goto 89
	seleccion  goto 90
	sentencias_ejecutables  goto 91
	declaracion_variables  goto 92
	tipo  goto 93


state 78
	iteracion : WHILE '(' condicion ')' DO . bloque_ejecutables  (45)

	BEGIN  shift 77
	.  error

	bloque_ejecutables  goto 94


state 79
	iteracion : WHILE '(' condicion ')' bloque_ejecutables .  (46)

	.  reduce 46


state 80
	declaracion : tipo FUN ID '(' ')' . bloque_funciones  (20)

	BEGIN  shift 95
	.  error

	bloque_funciones  goto 96


state 81
	declaracion : tipo FUN ID '(' tipo . ID ')' bloque_funciones  (19)

	ID  shift 97
	.  error


state 82
	parametros : '-' NUMERIC_CONST .  (43)

	.  reduce 43


state 83
	invocacion : ID '(' parametros ')' . ';'  (40)

	';'  shift 98
	.  error


state 84
	factor : ITOUL '(' expresion ')' .  (39)

	.  reduce 39


state 85
	seleccion : IF '(' condicion ')' THEN bloque_ejecutables . ELSE bloque END_IF  (47)
	seleccion : IF '(' condicion ')' THEN bloque_ejecutables . END_IF  (48)

	ELSE  shift 99
	END_IF  shift 100
	.  error


state 86
	sentencias_ejecutables : error . ';'  (17)

	';'  shift 101
	.  error


state 87
	sentencias_ejecutables : asignacion .  (13)

	.  reduce 13


state 88
	sentencias_ejecutables : impresion .  (14)

	.  reduce 14


state 89
	sentencias_ejecutables : iteracion .  (15)

	.  reduce 15


state 90
	sentencias_ejecutables : seleccion .  (16)

	.  reduce 16


state 91
	bloque_ejecutables : BEGIN sentencias_ejecutables . END  (56)

	END  shift 102
	.  error


state 92
	sentencias_ejecutables : declaracion_variables .  (12)

	.  reduce 12


state 93
	declaracion_variables : tipo . variables ';'  (21)

	ID  shift 26
	.  error

	variables  goto 103
	variable  goto 29


state 94
	iteracion : WHILE '(' condicion ')' DO bloque_ejecutables .  (45)

	.  reduce 45


state 95
	bloque_funciones : BEGIN . sentencias retorno END  (22)

	error  shift 4
	ID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	INTEGER  shift 9
	ULONGINT  shift 10
	.  error

	sentencias  goto 104
	sentencia  goto 12
	declaracion  goto 13
	asignacion  goto 14
	impresion  goto 15
	iteracion  goto 16
	seleccion  goto 17
	tipo  goto 18


state 96
	declaracion : tipo FUN ID '(' ')' bloque_funciones .  (20)

	.  reduce 20


state 97
	declaracion : tipo FUN ID '(' tipo ID . ')' bloque_funciones  (19)

	')'  shift 105
	.  error


state 98
	invocacion : ID '(' parametros ')' ';' .  (40)

	.  reduce 40


state 99
	seleccion : IF '(' condicion ')' THEN bloque_ejecutables ELSE . bloque END_IF  (47)

	BEGIN  shift 1
	.  error

	bloque  goto 106


state 100
	seleccion : IF '(' condicion ')' THEN bloque_ejecutables END_IF .  (48)

	.  reduce 48


state 101
	sentencias_ejecutables : error ';' .  (17)

	.  reduce 17


state 102
	bloque_ejecutables : BEGIN sentencias_ejecutables END .  (56)

	.  reduce 56


state 103
	declaracion_variables : tipo variables . ';'  (21)
	variables : variables . ',' variable  (25)

	';'  shift 107
	','  shift 44
	.  error


state 104
	sentencias : sentencias . sentencia  (3)
	bloque_funciones : BEGIN sentencias . retorno END  (22)

	error  shift 4
	ID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	RETURN  shift 108
	INTEGER  shift 9
	ULONGINT  shift 10
	.  error

	sentencia  goto 25
	declaracion  goto 13
	asignacion  goto 14
	impresion  goto 15
	iteracion  goto 16
	seleccion  goto 17
	tipo  goto 18
	retorno  goto 109


state 105
	declaracion : tipo FUN ID '(' tipo ID ')' . bloque_funciones  (19)

	BEGIN  shift 95
	.  error

	bloque_funciones  goto 110


state 106
	seleccion : IF '(' condicion ')' THEN bloque_ejecutables ELSE bloque . END_IF  (47)

	END_IF  shift 111
	.  error


state 107
	declaracion_variables : tipo variables ';' .  (21)

	.  reduce 21


state 108
	retorno : RETURN . '(' expresion ')' ';'  (57)

	'('  shift 112
	.  error


state 109
	bloque_funciones : BEGIN sentencias retorno . END  (22)

	END  shift 113
	.  error


state 110
	declaracion : tipo FUN ID '(' tipo ID ')' bloque_funciones .  (19)

	.  reduce 19


state 111
	seleccion : IF '(' condicion ')' THEN bloque_ejecutables ELSE bloque END_IF .  (47)

	.  reduce 47


state 112
	retorno : RETURN '(' . expresion ')' ';'  (57)

	ID  shift 30
	NUMERIC_CONST  shift 31
	ITOUL  shift 32
	'-'  shift 33
	.  error

	expresion  goto 114
	termino  goto 35
	factor  goto 36
	invocacion  goto 37


state 113
	bloque_funciones : BEGIN sentencias retorno END .  (22)

	.  reduce 22


state 114
	expresion : expresion . '+' termino  (30)
	expresion : expresion . '-' termino  (31)
	retorno : RETURN '(' expresion . ')' ';'  (57)

	')'  shift 115
	'+'  shift 49
	'-'  shift 50
	.  error


state 115
	retorno : RETURN '(' expresion ')' . ';'  (57)

	';'  shift 116
	.  error


state 116
	retorno : RETURN '(' expresion ')' ';' .  (57)

	.  reduce 57


34 terminals, 25 nonterminals
58 grammar rules, 117 states
